--- a/index.html
+++ b/index.html
@@ -66,68 +66,68 @@
             <div class="cf mb5 mb6-ns pa2 pa3-ns">
                 <div class="fl ph2 w-100 w-50-ns">
                     <a href="photography/large/1-large.jpg" class="black db grow no-underline pv2 swipebox">
-                        <img class="db w-100" src="photography/preview/1-preview.jpg">
+                        <img class="db w-100" src="photography/preview/1-preview.jpg" alt="">
                     </a>
                     <a href="photography/large/2-large.jpg" class="black db grow no-underline pv2 swipebox">
-                        <img class="db w-100" src="photography/preview/2-preview.jpg">
+                        <img class="db w-100" src="photography/preview/2-preview.jpg" alt="">
                     </a>
                     <a href="photography/large/3-large.jpg" class="black db grow no-underline pv2 swipebox">
-                        <img class="db w-100" src="photography/preview/3-preview.jpg">
+                        <img class="db w-100" src="photography/preview/3-preview.jpg" alt="">
                     </a>
                     <a href="photography/large/4-large.jpg" class="black db grow no-underline pv2 swipebox">
-                        <img class="db w-100" src="photography/preview/4-preview.jpg">
+                        <img class="db w-100" src="photography/preview/4-preview.jpg" alt="">
                     </a>
                 </div>
                 <div class="fl ph2 w-50 w-25-ns">
                     <a href="photography/large/5-large.jpg" class="black db grow no-underline pv2 swipebox">
-                        <img class="db w-100" src="photography/preview/5-preview.jpg">
+                        <img class="db w-100" src="photography/preview/5-preview.jpg" alt="">
                     </a>
                     <a href="photography/large/6-large.jpg" class="black db grow no-underline pv2 swipebox">
-                        <img class="db w-100" src="photography/preview/6-preview.jpg">
+                        <img class="db w-100" src="photography/preview/6-preview.jpg" alt="">
                     </a>
                     <a href="photography/large/7-large.jpg" class="black db grow no-underline pv2 swipebox">
-                        <img class="db w-100" src="photography/preview/7-preview.jpg">
+                        <img class="db w-100" src="photography/preview/7-preview.jpg" alt="">
                     </a>
                     <a href="photography/large/8-large.jpg" class="black db grow no-underline pv2 swipebox">
-                        <img class="db w-100" src="photography/preview/8-preview.jpg">
+                        <img class="db w-100" src="photography/preview/8-preview.jpg" alt="">
                     </a>
                     <a href="photography/large/9-large.jpg" class="black db grow no-underline pv2 swipebox">
-                        <img class="db w-100" src="photography/preview/9-preview.jpg">
+                        <img class="db w-100" src="photography/preview/9-preview.jpg" alt="">
                     </a>
                     <a href="photography/large/10-large.jpg" class="black db grow no-underline pv2 swipebox">
-                        <img class="db w-100" src="photography/preview/10-preview.jpg">
+                        <img class="db w-100" src="photography/preview/10-preview.jpg" alt="">
                     </a>
                     <a href="photography/large/11-large.jpg" class="black db grow no-underline pv2 swipebox">
-                        <img class="db w-100" src="photography/preview/11-preview.jpg">
+                        <img class="db w-100" src="photography/preview/11-preview.jpg" alt="">
                     </a>
                     <a href="photography/large/12-large.jpg" class="black db grow no-underline pv2 swipebox">
-                        <img class="db w-100" src="photography/preview/12-preview.jpg">
+                        <img class="db w-100" src="photography/preview/12-preview.jpg" alt="">
                     </a>
                 </div>
                 <div class="fl ph2 w-50 w-25-ns">
                     <a href="photography/large/13-large.jpg" class="black db grow no-underline pv2 swipebox">
-                        <img class="db w-100" src="photography/preview/13-preview.jpg">
+                        <img class="db w-100" src="photography/preview/13-preview.jpg" alt="">
                     </a>
                     <a href="photography/large/14-large.jpg" class="black db grow no-underline pv2 swipebox">
-                        <img class="db w-100" src="photography/preview/14-preview.jpg">
+                        <img class="db w-100" src="photography/preview/14-preview.jpg" alt="">
                     </a>
                     <a href="photography/large/15-large.jpg" class="black db grow no-underline pv2 swipebox">
-                        <img class="db w-100" src="photography/preview/15-preview.jpg">
+                        <img class="db w-100" src="photography/preview/15-preview.jpg" alt="">
                     </a>
                     <a href="photography/large/16-large.jpg" class="black db grow no-underline pv2 swipebox">
-                        <img class="db w-100" src="photography/preview/16-preview.jpg">
+                        <img class="db w-100" src="photography/preview/16-preview.jpg" alt="">
                     </a>
                     <a href="photography/large/17-large.jpg" class="black db grow no-underline pv2 swipebox">
-                        <img class="db w-100" src="photography/preview/17-preview.jpg">
+                        <img class="db w-100" src="photography/preview/17-preview.jpg" alt="">
                     </a>
                     <a href="photography/large/18-large.jpg" class="black db grow no-underline pv2 swipebox">
-                        <img class="db w-100" src="photography/preview/18-preview.jpg">
+                        <img class="db w-100" src="photography/preview/18-preview.jpg" alt="">
                     </a>
                     <a href="photography/large/19-large.jpg" class="black db grow no-underline pv2 swipebox">
-                        <img class="db w-100" src="photography/preview/19-preview.jpg">
+                        <img class="db w-100" src="photography/preview/19-preview.jpg" alt="">
                     </a>
                     <a href="photography/large/20-large.jpg" class="black db grow no-underline pv2 swipebox">
-                        <img class="db w-100" src="photography/preview/20-preview.jpg">
+                        <img class="db w-100" src="photography/preview/20-preview.jpg" alt="">
                     </a>
                 </div>
             </div>
@@ -139,22 +139,22 @@
             <div class="cf pa2 pa3-ns pb5 pb6-ns">
                 <div class="fl ph2 w-50 w-25-ns">
                     <a href="paintings/1-large.jpeg" class="black db grow no-underline pv2 swipebox">
-                        <img class="db w-100" src="paintings/1-preview.jpeg">
+                        <img class="db w-100" src="paintings/1-preview.jpeg" alt="">
                     </a>
                 </div>
                 <div class="fl ph2 w-50 w-25-ns">
                     <a href="paintings/2.jpeg" class="black db grow no-underline pv2 swipebox">
-                        <img class="db w-100" src="paintings/2.jpeg">
+                        <img class="db w-100" src="paintings/2.jpeg" alt="">
                     </a>
                 </div>
                 <div class="fl ph2 w-50 w-25-ns">
                     <a href="paintings/3-large.jpeg" class="black db grow no-underline pv2 swipebox">
-                        <img class="db w-100" src="paintings/3-preview.jpeg">
+                        <img class="db w-100" src="paintings/3-preview.jpeg" alt="">
                     </a>
                 </div>
                 <div class="fl ph2 w-50 w-25-ns">
                     <a href="paintings/4.jpg" class="black db grow no-underline pv2 swipebox">
-                        <img class="db w-100" src="paintings/4.jpg">
+                        <img class="db w-100" src="paintings/4.jpg" alt="">
                     </a>
                 </div>
             </div>
