--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
     <section class="center ph3 ph5-ns ph0-l mw7">
         <h1 class="f5 f4-ns f3-l normal pt5 pt6-ns">Albums</h1>
         <div class="bt cf">
+            <p class="f4-l fl "><a class="i link near-white underline-hover" href="https://samuelregan.bandcamp.com/album/five-interludes-for-piano-and-cassette">Five Interludes for Piano and Cassette
+</a></p>
+            <p class="courier f4-l fr"><span class="dn-ns">10/19/16</span><span class="dn db-ns">October 19, 2016</span></p>
+        </div>
+        <div class="bt cf">
             <p class="f4-l fl "><a class="i link near-white underline-hover" href="https://samuelregan.bandcamp.com/album/the-gate">The Gate</a></p>
             <p class="courier f4-l fr"><span class="dn-ns">10/18/16</span><span class="dn db-ns">October 18, 2016</span></p>
         </div>
