--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section class="center ph3 ph5-ns ph0-l mw7">
         <h1 class="f5 f4-ns f3-l normal pt5 pt6-ns">Albums</h1>
         <div class="bt cf">
-            <p class="f4-l fl "><a class="i link near-white underline-hover" href="https://samuelregan.bandcamp.com/album/five-interludes-for-piano-and-cassette">Five Interludes
+            <p class="f4-l fl "><a class="i link near-white underline-hover" href="https://samuelregan.bandcamp.com/album/five-interludes-for-piano-and-cassette">Five Interludes for <br class="dn-ns">Piano and Cassette
 </a></p>
             <p class="courier f4-l fr"><span class="dn-ns">10/19/16</span><span class="dn db-ns">October 19, 2016</span></p>
         </div>
