--- a/paintings.html
+++ b/paintings.html
@@ -140,7 +140,7 @@
         </section>
         <section>
             <div class="center mw7 ph3 ph5-ns ph0-l">
-                <h1 class="f5 f4-ns f3-l mb3 normal pt4 pt5-ns">Painting</h1>
+                <h1 class="f5 f4-ns f3-l mb3 normal pt4 pt5-ns">Paintings and Drawings</h1>
             </div>
             <div class="cf pa2 pa3-ns pb5 pb6-ns">
                 <div class="fl ph2 w-100 w-50-ns">
