--- a/paintings.html
+++ b/paintings.html
@@ -144,42 +144,48 @@
             </div>
             <div class="cf pa2 pa3-ns pb5 pb6-ns">
                 <div class="fl ph2 w-100 w-50-ns">
-                    <a href="paintings/unedited/IMG_1666.jpg" class="black db grow no-underline pv2 swipebox">
-                        <img class="db w-100" src="paintings/unedited/Attach1816_20161121_094840.jpeg" alt="">
+                    <a href="paintings/large/1.jpeg" class="black db grow no-underline pv2 swipebox">
+                        <img class="db w-100" src="paintings/preview/1.jpeg" alt="">
                     </a>
-                    <a href="unedited/" class="black db grow no-underline pv2 swipebox">
-                        <img class="db w-100" src="paintings/unedited/Attach1817_20161121_094844.jpeg" alt="">
+                    <a href="paintings/large/2.jpeg" class="black db grow no-underline pv2 swipebox">
+                        <img class="db w-100" src="paintings/preview/2.jpeg" alt="">
                     </a>
-                </div>
-                <div class="fl ph2 w-50 w-25-ns">
-                    <a href="unedited/" class="black db grow no-underline pv2 swipebox">
-                        <img class="db w-100" src="paintings/unedited/IMG_1680.jpg" alt="">
-                    </a>
-                    <a href="unedited/" class="black db grow no-underline pv2 swipebox">
-                        <img class="db w-100" src="paintings/unedited/IMG_1689.jpg" alt="">
-                    </a>
-                    <a href="unedited/" class="black db grow no-underline pv2 swipebox">
-                        <img class="db w-100" src="paintings/unedited/IMG_1690.jpg" alt="">
-                    </a>
-                    <a href="unedited/" class="black db grow no-underline pv2 swipebox">
-                        <img class="db w-100" src="paintings/unedited/IMG_1692.jpg" alt="">
+                    <a href="paintings/large/3.jpeg" class="black db grow no-underline pv2 swipebox">
+                        <img class="db w-100" src="paintings/preview/3.jpeg" alt="">
                     </a>
                 </div>
                 <div class="fl ph2 w-50 w-25-ns">
-                    <a href="unedited/" class="black db grow no-underline pv2 swipebox">
-                        <img class="db w-100" src="paintings/unedited/IMG_1676.JPG" alt="">
+                    <a href="paintings/large/4.jpeg" class="black db grow no-underline pv2 swipebox">
+                        <img class="db w-100" src="paintings/preview/4.jpeg" alt="">
                     </a>
-                    <a href="unedited/" class="black db grow no-underline pv2 swipebox">
-                        <img class="db w-100" src="paintings/unedited/IMG_1694.jpg" alt="">
+                    <a href="paintings/large/5.jpeg" class="black db grow no-underline pv2 swipebox">
+                        <img class="db w-100" src="paintings/preview/5.jpeg" alt="">
                     </a>
-                    <a href="unedited/" class="black db grow no-underline pv2 swipebox">
-                        <img class="db w-100" src="paintings/unedited/IMG_1695.jpg" alt="">
+                    <a href="paintings/large/6.jpeg" class="black db grow no-underline pv2 swipebox">
+                        <img class="db w-100" src="paintings/preview/6.jpeg" alt="">
                     </a>
-                    <a href="unedited/" class="black db grow no-underline pv2 swipebox">
-                        <img class="db w-100" src="paintings/unedited/IMG_1698.jpg" alt="">
+                    <a href="paintings/large/7.jpeg" class="black db grow no-underline pv2 swipebox">
+                        <img class="db w-100" src="paintings/preview/7.jpeg" alt="">
                     </a>
-                    <a href="unedited/" class="black db grow no-underline pv2 swipebox">
-                        <img class="db w-100" src="paintings/unedited/IMG_1687.jpg" alt="">
+                    <a href="paintings/large/8.jpeg" class="black db grow no-underline pv2 swipebox">
+                        <img class="db w-100" src="paintings/preview/8.jpeg" alt="">
+                    </a>
+                </div>
+                <div class="fl ph2 w-50 w-25-ns">
+                    <a href="paintings/large/9.jpeg" class="black db grow no-underline pv2 swipebox">
+                        <img class="db w-100" src="paintings/preview/9.jpeg" alt="">
+                    </a>
+                    <a href="paintings/large/10.jpeg" class="black db grow no-underline pv2 swipebox">
+                        <img class="db w-100" src="paintings/preview/10.jpeg" alt="">
+                    </a>
+                    <a href="paintings/large/11.jpeg" class="black db grow no-underline pv2 swipebox">
+                        <img class="db w-100" src="paintings/preview/11.jpeg" alt="">
+                    </a>
+                    <a href="paintings/large/12.jpeg" class="black db grow no-underline pv2 swipebox">
+                        <img class="db w-100" src="paintings/preview/12.jpeg" alt="">
+                    </a>
+                    <a href="paintings/large/13.jpeg" class="black db grow no-underline pv2 swipebox">
+                        <img class="db w-100" src="paintings/preview/13.jpeg" alt="">
                     </a>
                 </div>
             </div>
