--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="/favicon.png">
     <!--<link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">-->
-    <link rel="stylesheet" href="src/css/swipebox.css">
+    <link rel="stylesheet" href="src/css/swipebox.min.css">
 
     <script src="lib/jquery-2.1.0.min.js"></script>
     <script src="src/js/jquery.swipebox.js"></script>
