--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <p class="courier f4-l fr"><span class="dn-ns">03/11/16</span><span class="dn db-ns">March 11, 2016</span></p>
         </div>
         <div class="cf bt">
-            <p class="f4-l fl"><a class="i link near-white underline-hover" href="https://samuelregan.bandcamp.com/album/stil-de-grain">Stil de Grain</a></p>
+            <p class="f4-l fl"><a class="i link near-white underline-hover" href="https://unknowntonerecords.bandcamp.com/album/stil-de-grain">Stil de Grain</a></p>
             <p class="courier f4-l fr"><span class="dn-ns">09/15/15</span><span class="dn db-ns">September 15, 2015</span></p>
         </div>
     </section>
@@ -55,7 +55,7 @@
             <p class="courier f4-l fr"><span class="dn-ns">Forthcoming</span><span class="dn db-ns">Album Forthcoming</span></p>
         </div>
         <div class="bt cf">
-            <p class="f4-l fl"><a class="i link near-white underline-hover" href="https://samuelregan.bandcamp.com/album/untitled">Ben<span class="dn di-l">jamin</span> Hill &amp; Sam<span class="dn di-l">uel</span> Regan<br class="dn-l">&mdash;Untitled</a></p>
+            <p class="f4-l fl"><a class="i link near-white underline-hover" href="https://unknowntonerecords.bandcamp.com/album/untitled">Ben<span class="dn di-l">jamin</span> Hill &amp; Sam<span class="dn di-l">uel</span> Regan<br class="dn-l">&mdash;Untitled</a></p>
             <p class="courier f4-l fr"><span class="dn-ns">12/09/15</span><span class="dn db-ns">December 9, 2015</span></p>
         </div>
         <div class="bt cf">
