--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
     <section class="center mw7 pb5 pb6-ns ph3 ph5-ns ph0-l">
         <h1 class="f5 f4-ns f3-l normal pt4 pt5-ns">Collaborations</h1>
         <div class="bt cf">
+            <p class="f4-l fl"><a class="i link near-white underline-hover" href="https://askanse.bandcamp.com/album/codetta">askanse &amp; Sam<span class="dn di-l">uel</span> Regan<br class="dn-l">&mdash;Codetta</a></p>
+            <p class="courier f4-l fr"><span class="dn-ns">01/04/17</span><span class="dn db-ns">January 4, 2017</span></p>
+        </div>
+        <div class="bt cf">
             <p class="f4-l fl"><a class="i link near-white underline-hover" href="http://askanse.bandcamp.com/releases">Askew</a></p>
             <p class="courier f4-l fr"><span class="dn-ns">Forthcoming</span><span class="dn db-ns">Album Forthcoming</span></p>
         </div>
