--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section class="center ph3 ph5-ns ph0-l mw7">
         <h1 class="f5 f4-ns f3-l normal pt5 pt6-ns">Albums</h1>
         <div class="bt cf">
-            <p class="f4-l fl "><a class="i link near-white underline-hover" href="https://samuelregan.bandcamp.com/album/prelude">εὐδαιμονία (prelude)</a></p>
+            <p class="f4-l fl "><a class="i link near-white underline-hover" href="https://samuelregan.bandcamp.com/album/eudaimonia">Eudaimonia</a></p>
             <p class="courier f4-l fr"><span class="dn-ns">02/03/17</span><span class="dn db-ns">February 3, 2017</span></p>
         </div>
         <div class="bt cf">
